<resources>
    <string name="app_name">Browser</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_menu">menu</string>
    <string name="button_find">find</string>
    <string name="button_profile">profile</string>
    <string name="button_back">back</string>
    <string name="button_best">best</string>
    <string name="select_default_search_engine">select the default search engine</string>
    <string name="select_language">select the language of the application</string>
    <string name="hint_search_bar">enter your request</string>
    <string name="menu_item_search_engine">default search engine</string>
    <string name="menu_item_language">language</string>
    <string name="menu_item_loading_history">download history</string>
    <string name="menu_item_history">history</string>
    <string name="button_all">all</string>
    <string name="menu_item_new_tab">new tab</string>
    <string name="button_reg">registration</string>
    <string name="button_input">enter</string>
    <string name="button_change_person">change</string>
    <string name="button_exit">exit</string>
    <string name="name">Name</string>
    <string name="pass">Password</string>
    <string name="pass2">Repeat password</string>
    <string name="passErr">passwords not equals</string>
    <string name="emptyErr">empty text view</string>
    <string name="mailErr">this email already used</string>
    <string name="success">Success</string>
    <string name="incorrect_login_or_pass">incorrect login or password</string>
    <string name="country">country</string>
    <string name="family">family</string>
    <string name="age">age</string>
    <string name="sex">sex</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="city">city</string>
    <string name="person">person</string>
    <string name="button_bot">bot</string>
    <string name="button_shop">shop</string>
    <string name="button_settings">settings</string>
    <string name="download_successful">download successful</string>
    <string name="download">download</string>
    <!--<string name="hello_world">Hello world!</string>-->
    <!--<string name="action_settings">Settings</string>-->
</resources>
