<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/etName"
                        android:layout_width="0dp"
                        android:inputType="textPersonName"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                    <requestFocus>
                    </requestFocus>
                </EditText>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/family"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/family"
                        android:layout_width="0dp"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                </EditText>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/age"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/age"
                        android:layout_width="0dp"
                        android:inputType="number"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                </EditText>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <ImageView android:layout_width="0dp" android:id="@+id/imageView" android:layout_height="match_parent"
                           android:layout_weight="1"/>
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Avatar"
                        android:id="@+id/btnAvatarReg" android:layout_margin="15dp"/>
            </LinearLayout>
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <RadioGroup android:layout_width="wrap_content"
                            android:id="@+id/sexGroup"
                            android:layout_height="wrap_content" android:orientation="horizontal">
                    <RadioButton android:layout_width="wrap_content"
                                 android:text="@string/male"
                                 android:id="@+id/male"
                                 android:layout_height="wrap_content"/>
                    <RadioButton android:layout_width="wrap_content"
                                 android:text="@string/female"
                                 android:layout_height="wrap_content"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Email"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/etEmail"
                        android:inputType="textEmailAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                </EditText>
            </LinearLayout>
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pass"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/pass1"
                        android:layout_width="0dp"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                </EditText>
            </LinearLayout>
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pass2"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/pass2"
                        android:layout_width="0dp"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                </EditText>
            </LinearLayout>

            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/country"
                        android:layout_width="0dp"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                </EditText>
            </LinearLayout>
            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp">
                </TextView>
                <EditText
                        android:id="@+id/city"
                        android:layout_width="0dp"
                        android:inputType="text"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                </EditText>
            </LinearLayout>

            <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/button_reg">
                </Button>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>