<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
        </TextView>
        <EditText
                android:id="@+id/etEmailInput"
                android:inputType="textEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">
        </EditText>
    </LinearLayout>
    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">
        </TextView>
        <EditText
                android:id="@+id/passInput"
                android:layout_width="0dp"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:layout_weight="1">
        </EditText>
    </LinearLayout>
    <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btnInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_input">
        </Button>
        <Button
                android:id="@+id/btnRegInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/button_reg">
        </Button>
    </LinearLayout>
</LinearLayout>